--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head></head>
-<body><h1>我不服</h1></body>
-<body><h2>哈哈哈哈</h2></body>
+<body><h1>我的天</h1></body>
+<body><h2>我不服</h2></body>
 <body><h3>我真的不服</h3></body>    
 <html>
